Fixing Navbar on Mobile

--- a/website_version/public/index.css
+++ b/website_version/public/index.css
@@ -15,7 +15,7 @@
 			color: #f4f4f4;
 		}
 		.mentor-title{
-
+			padding: 10px;
 		}
 		.hide{
 			visibility: hidden;
